# GravityCore-v16.1-Mechanical-Solar-Conversion

./: .gitignore  100 Day Simulation Results  100-Day Results Summary  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contact  How to Contribute  Project Roadmap  README.md  Research Questions  SECURITY.md  pyproject.toml  setup.py
Annual stress test/: adaptive_control_code.py  annual_simulation_adaptive.py  annual_simulation_no_adaptive.py  annual_summary_adaptive.md  annual_summary_no_adaptive.md
community/: collaboration_guidelines.md  dead_ends.md
simulation/: Basic Summary  core.py
simulation/analysis/: results.ipynb
simulation/validation/: physics_checks.py  temperature_response.py
theory/: concept_summary.md  gap_analysis.md  limits.md
